add helder as co-author

--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -106,7 +106,7 @@ grestore
 
 \begin{document}
 \title{Applying Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems}
-\author{Alessandro Trindade\and Hussama Ismail\and Renato Degelo\and Edilson Galv\~ao\and Lucas Cordeiro}
+\author{Alessandro Trindade\and Hussama Ismail\and Renato Degelo\and Edilson Galv\~ao\and Helder Silva \and Lucas Cordeiro}
 
 \institute{A. Trindade, H. Ismail, R. Degelo, E. Galv\~ao \at
               Graduate Program in Electrical Engineering, Federal University of Amazonas, Brazil \\
