--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -124,8 +124,7 @@ grestore
 
 \begin{abstract}
 We present an alternative approach to solve the hardware (HW) and software (SW) partitioning problem, which uses Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) in conjunction with a multi-core support using Open MultiProcessing. The multi-core SMT-based BMC approach allows initializing many verification instances based on the number of available processing cores. Each instance checks for a different optimum value until the optimization problem is satisfied. The goal is to show that multi-core model-checking techniques can be effective, in particular cases, to find the optimal solution of the HW-SW partitioning problem using an SMT-based BMC approach. 
-We implement and evaluate our algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). We also compare our approaches to other state-of-the-art optimization tools: Matlab and Z3.
-The experimental results show that there is no single optimization tool that solves all benchmarks; however, Matlab and Z3 are the most efficient tools to solve HW-SW partitioning problems, although ESBMC had a significant performance improvement from its sequential to parallel version, if compared to the state-of-the-art tools.
+We implement and evaluate our algorithms on top of the Efficient SMT-Based Context-Bounded Model Checker (ESBMC). We also compare our approaches to other state-of-the-art optimization tools: Matlab and Z3. Experimental results show that no single optimization tool solves all benchmarks; however, Matlab and Z3 are the most efficient ones to solve HW-SW partitioning problems, although ESBMC had a significant performance improvement from its sequential to parallel version.
 \end{abstract}
 
 \keywords{hardware-software co-design \and hardware-software partitioning\and optimization\and model checking\and multi-core\and OpenMP }
