--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -140,12 +140,7 @@ In any HW and SW design of complex systems, more time is spent on verification t
 
 In ~\cite{Trindade2015} and ~\cite{Trindade2014} was shown that it is possible to use Bounded Model Checking (BMC) based on Satisfiability Modulo Theories (SMT) to perform HW-SW partitioning in embedded systems. The present work extends those studies since there is a substantial improvement in terms of the genetic algorithm and the SMT-based verification method, which has been extended with a multi-core architecture. Multi-core processors have been used in all segments of industry to implement high-performance computing ~\cite{Wu2014}. In particular, hardware platforms, together with multi-processing platforms, have allowed verification algorithms to distribute tasks executions across multiple processors, which generate an increase in performance if compared to single-core solution. However, most verification algorithms still disregard the limitations of the CMOS technology, which limits the increase of the chip’s frequency after it reaches 4 GHz.
 
-\textcolor{Red}{Here, we exploit the availability of multi-core processors; in particular, SMT-based verification methods applied to the HW-SW partition propose are proposed, then the results are compared using ILP (integral linear programming), GA (generic algorithms) in a multi-core version, and the vZ tool that is a state-of-art optimization tool ~\cite{Bjorner2015}.} 
-
-\textcolor{Red}{The ILP algorithm uses intlinprog of the lib "Optimization Toolbox"~\cite{OpenMP1998}, it's function is to search the lower value that satisfies the problem described in Eq.(1). however, for some types of problems is impossible to use ILP due to the high computational cost. GA is an imitation of the human evolutionary process described as a computational model, its advantage is the simplification of the optimization problems formulation, usually is used on problems with a large amount of data (as travelling salesman)~\cite{GA}. Attention should be paid that GA doesn't guarantee to find the minimum or maximum value of the problem, it finds an aproximate solution of the optimized result. vZ is a built-in tool to Z3 solver, its main function is to check the satisfiability of logic formulas in an optimal way, vZ  brings the possibility to combine objectives using "Pareto-fronts", "lexicographic" priorities or independent optimizations.}
-
-
-To the best of our knowledge, this is the first work to use a multi-core SMT-based verification to solve a HW-SW partitioning problem in embedded systems. We implement our ideas with the Efficient SMT-based Bounded Model Checker (ESBMC) tool ~\cite{Cordeiro2012}. As its main contribution, this paper shows that it is possible to take advantage of an SMT-based BMC tool in a multi-core architecture to solve optimization problems.
+Here, we exploit the availability of multi-core processors; in particular, SMT-based verification methods are applied to the HW-SW partition problem and experimental results are compared to ILP (integral linear programming), GA (generic algorithms) in a multi-core version, and also the vZ tool, which is a state-of-art optimization tool based on SMT~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the Optimization Toolbox of Matlab~\cite{OpenMP1998}, while vZ is a built-in tool to the SMT solver Z3 in which its main function is to check the satisfiability of logical formulas based on objective functions. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification to solve a HW-SW partitioning problem in embedded systems. We implement our ideas with the Efficient SMT-based Bounded Model Checker (ESBMC) tool ~\cite{Cordeiro2012}. As its main contribution, this paper shows that it is possible to take advantage of an SMT-based BMC tool in a multi-core architecture to solve optimization problems.
 
 \textcolor{blue}{Voces precisam citar as secoes usando o comando ref do latex. Para isso, cada secao deve conter um label.}
 \textcolor{Red}{This article is organized as follows: Section~\ref{background} gives a background on optimization, optimization with vZ, use of BMC technique with ESBMC, multi-cre ESBMC using OpenMP, ESBMC using optimized techniques of search to multiples cores with OpenMP. Section 3 describes the informal and formal mathematical modeling. Section 4 briefly describes th ILP and GA. The BMC method is based on SMT and is presented in section 5. The section 6 presents the paritioning model using vZ. The section 7 presents the experimental evaluation. The Section 8 discusses about the related works. Section 9 presents the conclusions and the future work.}
