--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -115,9 +115,9 @@ grestore
               \email{\{iurybessa, hussamaibrahim\}@ufam.edu.br and\\{\{rdegelo, esj.galvao\}@gmail.com}}          %  \\
 %             \emph{Present address:} of F. Author  %  if needed
            \and
-           L. Cordeiro \at
-              Electronic and Information Research Center, Federal University of Amazonas, Brazil
-              \email: lucascordeiro@ufam.edu.br           %  \\
+           H. Silva and L. Cordeiro \at
+              Federal University of Amazonas, Brazil
+              \email: prhsilva2012@gmail.com lucascordeiro@ufam.edu.br           %  \\
 }
 
 \maketitle
@@ -142,18 +142,21 @@ In ~\cite{Trindade2015} and ~\cite{Trindade2014} was shown that it is possible t
 
 Here, we exploit the availability of multi-core processors; in particular, SMT-based verification methods are applied to the HW-SW partition problem and experimental results are compared to ILP (integral linear programming), GA (generic algorithms) in a multi-core version, and also the vZ tool, which is a state-of-art optimization tool based on SMT~\cite{Bjorner2015}. The ILP and GA algorithms are implemented with the Optimization Toolbox of Matlab~\cite{OpenMP1998}, while vZ is a built-in tool to the SMT solver Z3 in which its main function is to check the satisfiability of logical formulas based on objective functions. To the best of our knowledge, this is the first work to use a multi-core SMT-based verification to solve a HW-SW partitioning problem in embedded systems. We implement our ideas with the Efficient SMT-based Bounded Model Checker (ESBMC) tool ~\cite{Cordeiro2012}. As its main contribution, this paper shows that it is possible to take advantage of an SMT-based BMC tool in a multi-core architecture to solve optimization problems.
 
-\textcolor{blue}{Voces precisam citar as secoes usando o comando ref do latex. Para isso, cada secao deve conter um label.}
-\textcolor{Red}{This article is organized as follows: Section~\ref{background} gives a background on optimization, optimization with vZ, use of BMC technique with ESBMC, multi-cre ESBMC using OpenMP, ESBMC using optimized techniques of search to multiples cores with OpenMP. Section 3 describes the informal and formal mathematical modeling. Section 4 briefly describes th ILP and GA. The BMC method is based on SMT and is presented in section 5. The section 6 presents the paritioning model using vZ. The section 7 presents the experimental evaluation. The Section 8 discusses about the related works. Section 9 presents the conclusions and the future work.}
+This article is organized as follows: Section~\ref{background} gives a background on optimization techniques, vZ, ESBMC, and OpenMP tools. 
+Section~\ref{Mathematical-modeling} describes the informal and formal mathematical modeling. Section~\ref{ILPGA} briefly describes the ILP and GA algorithms, while Section~\ref{Analysis-of-the-partitioning-problem-using-vZ} presents the partitioning model using vZ. The SMT-based BMC method is presented in Section~\ref{Analysis-of-the-partitioning-problem-using-ESBMC}. In Section~\ref{Experimental-Evaluation}, we present the results of our experiments using several embedded systems applications. In Section~\ref{Related-Work}, we discuss the related work and we conclude and describe future work in Section~\ref{Conclusions}.
 
 %----------------------------------------------
 \section{Background}
 \label{background}
 %----------------------------------------------
+
 \textcolor{red}{ILP, GA and optimization problems solver tools are described in section 2.1. In the sections 2.2 and 2.3 the tools based on SMT and BMC are described, the sections describes the theories under the solvers and shows how the restrictions should be made.}
+
 %----------------------------------------------
 \subsection{Optimization}
 \label{Optimization}
 %----------------------------------------------
+
 \textcolor{red}{Optimization is the act of obtaining the best result (i.e., the optimal solution) under given circumstances ~\cite{Rao2009}. In the design, construction, and maintenance of any engineering system, engineers have to make many technological and managerial decisions at several stages. The ultimate goal of all such decisions is either to minimize the effort required or to maximize the desired benefit. Because the effort required or the benefit desired in any practical situation can be expressed as a function of certain decision variables, optimization can be defined as the process of finding the conditions that give the maximum or minimum value of a function ~\cite{Rao2009}.}
 
 There is no single method available for solving all optimization problems efficiently ~\cite{Rao2009}. The most known technique is linear programming, which is an method applicable for the solution of problems in which the objective function and the constraints appear as linear functions of the decision variables. A particular case of linear programming is ILP, in which the variables can assume just integer values. Eq. (1) shows a typical linear programming problem, where  and  are vectors or matrixes that describe the constraints
@@ -282,6 +285,42 @@ Three different optimization and decision problems can be defined. In this paper
 %----------------------------------------------
 
 The ILP and GA were taken from ~\cite{Trindade2015} and ~\cite{Trindade2014}. Both use slack variables in order to be possible to represent the constraints and to use commercial tools. However, GA had improvements from the parameters of related studies in order to increase the solution accuracy without producing timeout. The tuning was performed by empirical tests and resulted in changing of three parameters, which are passed to function ga of MATLAB ~\cite{TheMathWorks2013}: the population size was set from 300 to 500, the Elite count changed from 2 (default value) to 50, and the number of Generations changed from 100* NumberOfVariables (default) to 75.
+
+%----------------------------------------------
+\section{\textcolor{Red}{Analysis of the partitioning problem using vZ}}
+\label{Analysis-of-the-partitioning-problem-using-vZ}
+%----------------------------------------------
+
+The code below shows the conditions applied on ILP, GA and ESBMC converted to the vZ tool described in ~\cite{Bjorner2014} and ~\cite{OpenMP1998}. 
+
+A vZ context is created, it receives the restrictions and returns the model if a solution to the set of rectictions exists. Later the number of nodes are declared, number of edges, the number of, the cost of hardware, cost of software, cost of communication and the incidence matrix E.
+
+The arithmetic declarations described on the lines 10, 11,12 e 13 of the code are a transcription of the formula $ S(1-x) + C|Ex| \leq S{0} $ described on the section III.B, refers to the cost of software (SF). Note that in the line 11 a temporary variable called TMP is created to represent $C|Ex|$  , then the product between the absolute value of TMP and the vector C declared in the line 07, then the result of the cost of communication is generated (CMC). 
+
+In the line 13, the Fobj (Objective Function) is declared. It is a product between the cost of hardware with the vector that contains the values 0 and 1. Fobj should be minimized to get the best hardware solution .
+
+Two restrictions are imposed, the first refers to the sum between the cost of software and communication, the result of the sum should be less than , the second restriction tells to vZ that Fobj should be minimized. So the model is checked, once a solution that complains the restrictions, the value of the Fobj is printed.
+
+\begin{lstlisting}[caption=Pseudocode describing vZ]
+01.#Init Values
+02.  Create vZ context 
+03.  Create binary vector (x)
+04.  Declare number of nodes, edges and S0
+05.  Declare hardware cost of each node as array (h) 
+06.  Declare software cost of each node as array (s)
+07.  Declare communication cost of each edge (c)
+08.  Declare transposed incidence matrix graph G (E)
+09.#Arithmetic
+10.  SF receive s(1-x)
+11.  TMP vector receive E|x| 
+12.  CMC receive c*|EX|
+13.  Fobj receive  x[i] * h[i]
+14.#Asserts
+15.  Add restrictions (SF + CMC <= S0)
+16.  Add restrictions to minimize Fobj
+17.  Check Model
+18.  Print Result
+\end{lstlisting}
 
 %----------------------------------------------
 \section{Analysis of the partitioning problem using ESBMC}
@@ -427,42 +466,6 @@ $ esbmc-parallel <Filename.c> \; <hminvalue> \; <Hmax> $
 Where $ <Filename.c> $ is the optimization problem described in ANSI-C format, $  <hminvalue> $ is the minimum (zero to HW-SW partitioning problem) and $ <Hmax> $ is the maximum hardware cost for the specified problem.
 
 Therefore, the algorithm starts  different instances of ESBMC using the different optimization values, in ascending order, for $ Hmax $ in order to find a violation. If all instances finish and no violation is found, then multi-core ESBMC starts new $ N $ instances. When a violation is found, it reports time and hardware cost. If multi-core ESBMC tests all the possibilities for the hardware cost and has not found a violation, then it reports: $ Violation not found $.
-
-%----------------------------------------------
-\section{\textcolor{Red}{Analysis of the partitioning problem using vZ}}
-\label{Analysis-of-the-partitioning-problem-using-vZ}
-%----------------------------------------------
-
-The code below shows the conditions applied on ILP, GA and ESBMC converted to the vZ tool described in ~\cite{Bjorner2014} and ~\cite{OpenMP1998}. 
-
-A vZ context is created, it receives the restrictions and returns the model if a solution to the set of rectictions exists. Later the number of nodes are declared, number of edges, the number of, the cost of hardware, cost of software, cost of communication and the incidence matrix E.
-
-The arithmetic declarations described on the lines 10, 11,12 e 13 of the code are a transcription of the formula $ S(1-x) + C|Ex| \leq S{0} $ described on the section III.B, refers to the cost of software (SF). Note that in the line 11 a temporary variable called TMP is created to represent $C|Ex|$  , then the product between the absolute value of TMP and the vector C declared in the line 07, then the result of the cost of communication is generated (CMC). 
-
-In the line 13, the Fobj (Objective Function) is declared. It is a product between the cost of hardware with the vector that contains the values 0 and 1. Fobj should be minimized to get the best hardware solution .
-
-Two restrictions are imposed, the first refers to the sum between the cost of software and communication, the result of the sum should be less than , the second restriction tells to vZ that Fobj should be minimized. So the model is checked, once a solution that complains the restrictions, the value of the Fobj is printed.
-
-\begin{lstlisting}[caption=Pseudocode describing vZ]
-01.#Init Values
-02.  Create vZ context 
-03.  Create binary vector (x)
-04.  Declare number of nodes, edges and S0
-05.  Declare hardware cost of each node as array (h) 
-06.  Declare software cost of each node as array (s)
-07.  Declare communication cost of each edge (c)
-08.  Declare transposed incidence matrix graph G (E)
-09.#Arithmetic
-10.  SF receive s(1-x)
-11.  TMP vector receive E|x| 
-12.  CMC receive c*|EX|
-13.  Fobj receive  x[i] * h[i]
-14.#Asserts
-15.  Add restrictions (SF + CMC <= S0)
-16.  Add restrictions to minimize Fobj
-17.  Check Model
-18.  Print Result
-\end{lstlisting}
 
 
 %----------------------------------------------
