--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -150,7 +150,7 @@ Section~\ref{Mathematical-modeling} describes the informal and formal mathematic
 \label{background}
 %----------------------------------------------
 
-\textcolor{red}{ILP, GA and optimization problems solver tools are described in section 2.1. In the sections 2.2 and 2.3 the tools based on SMT and BMC are described, the sections describes the theories under the solvers and shows how the restrictions should be made.}
+The HW-SW partitioning problem is typically represented as a set of constraints and an objective function in linear programming. In this section, we describe the linear programming problem and present related tools that are used to model and solve the HW-SW partitioning problem.
 
 %----------------------------------------------
 \subsection{Optimization}
